--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "trailingComma": "all",
+  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "all"
+  "semi": true,
+  "bracketSpacing": false,
+  "bracketSameLine": false
 }
