--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,14 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format:staged": "pretty-quick --staged",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -58,6 +59,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.3",
     "prisma": "3.6.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
