--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format:client": "yarn --cwd ./client format:staged",
     "format:server": "yarn --cwd ./server format:staged",
     "lint:server": "yarn --cwd ./server lint",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "setup": "yarn install & yarn --cwd ./client install & yarn --cwd ./server install"
   },
   "devDependencies": {
     "husky": "^7.0.4"
