--- a/server/.env.sample
+++ b/server/.env.sample
@@ -7,3 +7,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://<user>:<password>@<host>:<port>/<database>"
+
+# Secret for jwt
+
+SECRET="you_secret"
