--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "start": "nx run-many --target=serve --projects=frontend,backend --parallel=2",
     "build": "nx build",
     "test": "nx test",
-    "postinstall": "ngcc --properties es2015 browser module main"
+    "format": "prettier --write ./apps",
+    "format:staged": "pretty-quick --staged",
+    "lint:frontend": "nx lint frontend",
+    "lint:backend": "nx lint backend",
+    "lint": "yarn lint:frontend && yarn lint:backend",
+    "lint:fix": "",
+    "postinstall": "ngcc --properties es2015 browser module main",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -71,9 +78,11 @@
     "eslint": "8.2.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^7.0.0",
     "jest": "27.2.3",
     "jest-preset-angular": "11.0.0",
     "prettier": "^2.3.1",
+    "pretty-quick": "^3.1.3",
     "prisma": "^3.8.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.4.3"
