--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,8 @@
               ["^\\./(?=.*/)(?!/?$)", "^\\.(?!/?$)", "^\\./?$"]
             ]
           }
-        ]
+        ],
+        "no-console": "warn"
       }
     },
     {
