--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@backend/*": ["apps/backend/src/app/*"],
-      "@frontend/*": ["apps/frontend/src/app/*"]
+      "@frontend/*": ["apps/frontend/src/prognotes/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
